trunk/Archive2/b2/75a379e23d0c6d/output
main.cpp:2:1: error: 'html' does not name a type
 html|www|function|vvplay|jwplayer|var|220|file|data||cgi|hide|video_ad|div|doPlay|mp4
 ^
